tests/instantiating/invalid/stream_elems_coflict_return_param/bus.fbd
Main bus
	My_Stream stream
		R return
		P param
